# src/registerServices.ts
@@ -1,30 +1,7 @@
 import { container } from "tsyringe";
-import { AuthService } from "./modules/user/services/Auth.service";
-import { UserService } from "./modules/user/services/User.Service";
-import { CreateUserUsecase } from "./modules/user/use-cases/CreateUser.usecase";
-import { DecryptPasswordUsecase } from "./modules/user/use-cases/DecryptPassword.usecase";
-import { EncryptPasswordUsecase } from "./modules/user/use-cases/EncryptPassword.usecase";
-import { GetUserUsecase } from "./modules/user/use-cases/GetUser.usecase";
 import { Components } from "./shared/constants/Components";
 import type { ILogger } from "./shared/services/logger/ILogger";
 import Logger from "./shared/services/logger/Logger";
+import "./modules/user/registerUserServices";
 
 container.register<ILogger>(Components.Logger, { useClass: Logger });
-container.register(Components.CreateUserUsecase, {
-	useClass: CreateUserUsecase,
-});
-container.register<EncryptPasswordUsecase>(Components.EncryptPasswordUsecase, {
-	useClass: EncryptPasswordUsecase,
-});
-container.register<DecryptPasswordUsecase>(Components.DecryptPasswordUsecase, {
-	useClass: DecryptPasswordUsecase,
-});
-container.register<AuthService>(Components.AuthService, {
-	useClass: AuthService,
-});
-container.register<UserService>(Components.UserService, {
-	useClass: UserService,
-});
-container.register<GetUserUsecase>(Components.GetUserUseCase, {
-	useClass: GetUserUsecase,
-});
